--- a/package.json
+++ b/package.json
@@ -17,16 +17,21 @@
     "@paypal/react-paypal-js": "^8.1.3",
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/supabase-js": "^2.38.0",
+    "@types/qrcode": "^1.5.2",
     "axios": "^1.5.1",
     "bizcharts": "^4.1.22",
     "chart.js": "^4.4.0",
+    "dotenv": "^16.3.1",
     "formik": "^2.4.5",
     "next": "latest",
     "next-auth": "^4.23.1",
+    "nodemailer": "^6.9.6",
     "paypal-checkout": "^4.0.338",
     "paypal-rest-sdk": "^1.8.1",
     "pondjs": "^0.9.0",
     "postcss-reporter": "^7.0.5",
+    "qrcode": "^1.5.3",
+    "qrcode.react": "^3.1.0",
     "react": "latest",
     "react-activity": "^2.1.3",
     "react-chartjs-2": "^5.2.0",
@@ -34,6 +39,7 @@
     "react-dom": "latest",
     "react-dropdown": "^1.11.0",
     "react-icons": "^4.11.0",
+    "react-paypal-button-v2": "^2.6.3",
     "react-timeseries-charts": "^0.16.1",
     "recharts": "^2.8.0",
     "victory": "^36.6.11",
