--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-activity": "^2.1.3",
     "react-chartjs-2": "^5.2.0",
     "react-charts": "^2.0.0-beta.7",
+    "react-countdown": "^2.3.5",
     "react-dom": "latest",
     "react-dropdown": "^1.11.0",
     "react-icons": "^4.11.0",
