--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dropdown": "^1.11.0",
     "react-icons": "^4.11.0",
     "react-paypal-button-v2": "^2.6.3",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-timeseries-charts": "^0.16.1",
     "recharts": "^2.8.0",
     "victory": "^36.6.11",
