--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "postcss-reporter": "^7.0.5",
     "qrcode": "^1.5.3",
     "qrcode.react": "^3.1.0",
-    "react": "latest",
+    "react": "^18.2.0",
     "react-activity": "^2.1.3",
     "react-chartjs-2": "^5.2.0",
     "react-charts": "^2.0.0-beta.7",
@@ -44,6 +44,7 @@
     "react-qr-reader": "^3.0.0-beta-1",
     "react-timeseries-charts": "^0.16.1",
     "recharts": "^2.8.0",
+    "supabase": "^1.100.1",
     "victory": "^36.6.11",
     "yup": "^1.3.2"
   },
