--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-icons": "^4.11.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-qr-reader": "^3.0.0-beta-1",
+    "react-responsive-carousel": "^3.2.23",
     "react-timeseries-charts": "^0.16.1",
     "recharts": "^2.8.0",
     "victory": "^36.6.11",
