--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.12",
+    "@mui/material": "^5.14.15",
     "@nivo/line": "^0.83.0",
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@paypal/react-paypal-js": "^8.1.3",
@@ -46,6 +46,7 @@
     "react-timeseries-charts": "^0.16.1",
     "recharts": "^2.8.0",
     "supabase": "^1.100.1",
+    "uniqid": "^5.4.0",
     "victory": "^36.6.11",
     "yup": "^1.3.2"
   },
